--- a/styles/style.css
+++ b/styles/style.css
@@ -10,13 +10,17 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .container {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
 
 }
 
@@ -63,33 +67,142 @@ hr {
 
 
 /* top blog style  */
-.blogs{
+.blogs {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-row-gap:26px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
 }
+
 .blog img {
 
     width: 177px;
     height: 117px;
 }
-.blog{
+
+.blog {
     display: flex;
 }
-.blog-info{
+
+.blog-info {
     margin-left: 16px;
 
 }
-.blog-title{
+
+.blog-title {
     font-size: 20px;
 }
 
-.blog-author{
+.blog-author {
     font-size: 16px;
     color: #9F9F9F;
 }
+
 .blog-author a {
-    text-decoration: none ;
+    text-decoration: none;
     color: #562EFF;
     font-size: 16px;
+}
+
+/* cources style  */
+.cources {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+
+}
+
+.course {
+    Width: 252.42px;
+    Height: 269.79px;
+    box-shadow: (0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05));
+
+}
+
+.course .course-banner img {
+    width: 224px;
+    height: 104px;
+}
+
+.course-author a {
+    text-decoration: none;
+    color: #ED6B4F;
+    font-size: 14.69 px;
+}
+
+.course-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.ratting {
+    color: #A2A2A2;
+    font-size: 14.69px;
+}
+
+.course-duration {
+    font-size: 15;
+    font-weight: 600;
+    background-color: #FEE5DF;
+    color: #ED6B4F;
+    border-radius: 14.6913px;
+}
+
+.fa-star {
+    font-size: 12px;
+}
+
+.fa-star.filled {
+    color: #FFC014;
+}
+
+.fa-star.emty {
+    color: #AEAEAE;
+}
+
+
+/* media queries  */
+
+@media only screen and (max-width: 688px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .cources {
+
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player,
+    .blog,
+    .course {
+        flex-direction: column;
+    }
+
+    .cources {
+        grid-row-gap: 50px;
+    }
+
+
+}
+
+/* tablet devices */
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .cources {
+        grid-template-columns: repeat(2, 1fr);
+
+
+    }
+
+    .cources {
+        grid-row-gap: 50px;
+    }
+
 }
